After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 756239 - adaptivedemux: header is not re-downloaded in case of errors
adaptivedemux: header is not re-downloaded in case of errors
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal normal
: 1.7.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-10-08 11:32 UTC by Florin Apostol
Modified: 2015-10-30 11:49 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
proposed patch (1007 bytes, patch)
2015-10-08 11:37 UTC, Florin Apostol
committed Details | Review

Description Florin Apostol 2015-10-08 11:32:48 UTC
In case of downloading errors, the stream->need_header is set to FALSE and header download will not be retried.
Comment 1 Florin Apostol 2015-10-08 11:37:17 UTC
Created attachment 312907 [details] [review]
proposed patch
Comment 2 Vincent Penquerc'h 2015-10-30 11:48:42 UTC
commit a85b64bb6d024254b2f378b96a9d93bbb3df0121
Author: Florin Apostol <florin.apostol@oregan.net>
Date:   Thu Oct 8 12:35:44 2015 +0100

    adaptivedemux: fix header redownload in case of errors
    
    https://bugzilla.gnome.org/show_bug.cgi?id=756239