adaptivedemux: fix header redownload in case of errors

https://bugzilla.gnome.org/show_bug.cgi?id=756239